--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "<!-- title: 'AWS NodeJS Example' description: 'This template demonstrates how to deploy a NodeJS function running on AWS Lambda using the traditional Serverless Framework.' layout: Doc framework: v2 platform: AWS language: nodeJS priority: 1 authorLink: 'https://github.com/serverless' authorName: 'Serverless, inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
   "main": "src/handler.js",
   "scripts": {
+    "dynamo:install": "sls dynamodb install",
+    "dynamo:remove": "sls dynamodb remove",
     "dev": "node --inspect $(npm bin)/sls offline start"
   },
   "repository": {
@@ -20,6 +22,7 @@
     "prettier": "^2.2.1",
     "serverless": "^2.0.0",
     "serverless-dotenv-plugin": "^3.0.0",
-    "serverless-offline": "^6.5.0"
+    "serverless-offline": "^6.5.0",
+    "serverless-dynamodb-local": "^0.2.40"
   }
 }
