--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "redone-vote",
   "version": "0.0.1",
-  "description": "<!-- title: 'AWS NodeJS Example' description: 'This template demonstrates how to deploy a NodeJS function running on AWS Lambda using the traditional Serverless Framework.' layout: Doc framework: v2 platform: AWS language: nodeJS priority: 1 authorLink: 'https://github.com/serverless' authorName: 'Serverless, inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
-  "main": "src/handler.js",
+  "description": "A set of endpoints to provide voting mechanism",
+  "main": "src/votes.js",
   "scripts": {
     "dynamo:install": "sls dynamodb install",
     "dynamo:remove": "sls dynamodb remove",
-    "dev": "node --inspect $(npm bin)/sls offline start"
+    "dev": "node --inspect $(npm bin)/sls offline start",
+    "deploy:prod": "sls deploy --stage prod",
+    "remove:dev": "sls remove --stage dev --region us-west-1"
   },
   "repository": {
     "type": "git",
