--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "prettier": "^2.2.1",
     "serverless": "^2.63.0",
+    "serverless-api-gateway-throttling": "^1.1.1",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^6.5.0"
   },
